[package]
name = "rs-process-info-graphql"
version = "0.1.0"
edition = "2024"

[dependencies.sysinfo]
version = "0.36.1"
default-features = false
features = [
	"system",
	"disk",
	"user",
	"serde",
]

[dependencies.async-graphql]
version = "7.0.17"
default-features = false
features = [
	"graphiql",
	"playground",
]


[dependencies.serde]
version = "1.0.219"
default-features = false
features = [
	"std",
	"derive",
]

[dependencies.serde_json]
version = "1.0.141"
default-features = false
features = [
	"std",
]

[dependencies.actix-web]
version = "4"

[dependencies.async-graphql-actix-web]
version = "7.0.17"
